--- a/index.html
+++ b/index.html
@@ -2,84 +2,124 @@
 <html lang="eng-CA">
   <head>
     <meta charset="utf-8">
-    <title>3D Modelling</title>
+    <title>Folio-3D Modelling</title>
     <!-- Created by Dolapo Ajiboye on 08/12/2024 -->
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Italianno&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@400;700&family=KoHo:wght@300;400&display=swap" rel="stylesheet">
     
     <style>
       body {
-        color: #000000;
-        background-color: #FDC56A;
+        color: #FFFFFF;
+        background-color: #8554D4;
         margin: 0;
-        font-family: 'Indie Flower', cursive; 
+        font-family: 'KoHo', sans-serif;
         text-align: center;
       }
 
       .wrapper {
-        background-color: #FFF4E3;
+        background-color: #000000;
         width: 92%;   
         max-width: 1200px;
         margin: 20px auto;       
         padding: 20px;           
         border-radius: 10px; 
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        min-height: 2200px;
       }
 
-      .italianno {
-        font-family: 'Italianno', cursive;
-        font-size: 6em;
-        font-weight: 300;
-        margin: 20px 0;
+      .Kalnia {
+        font-family: 'Kalnia', serif;
+        font-size: 7em;
+        font-weight: 700;
+        margin: 0;
+        color: #8554D4;
+        text-align: center;
+      }
+
+      #nav {
+        clear: both;
+        padding: 0;
+        margin-bottom: 100px;
       }
 
       #nav ul {
-        border-top: 2px solid #000;
-        border-bottom: 2px solid #000;
+        border-top: 2px solid #FFFFFF;
+        border-bottom: 2px solid #FFFFFF;
         list-style: none;
         margin: 0;
         padding: 0;
         display: flex;
         justify-content: center;
-        background-color: #FFFFFF;
+        background-color: #000000;
       }
 
       #nav li {
-        margin: 0 20px;
+        margin: 0 10px;
       }
 
       #nav a {
         text-decoration: none;
-        color: #000000;
+        color: #FFFFFF;
         font-size: 1.2em;
-        padding: 10px 20px;
+        padding: 0px 50px;
         display: block;
         transition: color 0.3s ease;
       }
 
       #nav a:hover {
-        color: #FDC56A;
+        color: #8554D4;
       }
 
-      .image-container img {
-        width: 70%;
+      .image-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr; 
+        gap: 20px;
+        padding: 20px;
+      }
+
+      .image-wrapper {
+        position: relative;
+        overflow: hidden;
+        border-radius: 8px;
+      }
+
+      .image-wrapper img {
+        width: 100%;
         height: auto;
-        border: 2px solid #000;
-        border-radius: 5px;
+        border: 2px solid #FFFFFF;
+        border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
-        margin: 7px;
+        cursor: pointer;
       }
 
-      .image-container img:hover {
-        transform: scale(1.05);
+      .image-wrapper img:hover {
+        transform: scale(1.3);
         box-shadow: 0 12px 16px rgba(0, 0, 0, 0.3);
+      }
+
+      .image-name {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        text-align: center;
+        padding: 10px;
+        font-size: 1.2em;
+        font-weight: bold;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
+
+      .image-wrapper:hover .image-name {
+        opacity: 1;
       }
     </style>
   </head>
   <body>
     <div class="wrapper">
-
       <div id="nav">
         <ul>
           <li><a href="https://oyed18.github.io/The-Gallery/">Home</a></li>
@@ -91,25 +131,46 @@
       </div>
 
       <div id="header">
-        <h1 class="italianno">3D Modelling</h1>
+        <h1 class="Kalnia">3D Modelling</h1>
       </div>
 
       <div class="blender-models">
         <h2>Made on Blender</h2>
         <div class="image-container">
-          <img src="fries.png" alt="3d1">
-          <img src="donuts.jpg" alt="3d2">
-          <img src="tea cup.png" alt="3d4">
-          <img src="petals.png" alt="3d5">
-          <img src="Flowers in a jar.png" alt="3d6">
+          <div class="image-wrapper">
+            <img src="fries.png" alt="3D Fries">
+            <span class="image-name">3D Fries</span>
+          </div>
+          <div class="image-wrapper">
+            <img src="donuts.jpg" alt="3D Donuts">
+            <span class="image-name">3D Donuts</span>
+          </div>
+          <div class="image-wrapper">
+            <img src="tea cup.png" alt="3D Tea Cup">
+            <span class="image-name">3D Tea Cup</span>
+          </div>
+          <div class="image-wrapper">
+            <img src="petals.png" alt="3D Petals">
+            <span class="image-name">3D Petals</span>
+          </div>
+          <div class="image-wrapper">
+            <img src="Flowers in a jar.png" alt="Flowers in a Jar">
+            <span class="image-name">Flowers in a Jar</span>
+          </div>
         </div>
       </div>
-      
+
       <div class="wip-models">
-        <h2>Works in progress</h2>
+        <h2>Works in Progress</h2>
         <div class="image-container">
-          <img src="msword.png" alt="3d3">
-          <img src="BMO.png" alt="3d7">
+          <div class="image-wrapper">
+            <img src="msword.png" alt="3D Sword">
+            <span class="image-name">3D Sword</span>
+          </div>
+          <div class="image-wrapper">
+            <img src="BMO.png" alt="3D BMO">
+            <span class="image-name">3D BMO</span>
+          </div>
         </div>
       </div>
     </div>
