--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       .image-container {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr; 
+        grid-template-columns: 1fr 1fr; 
         gap: 20px;
         padding: 20px;
       }
@@ -151,11 +151,11 @@
           </div>
           <div class="image-wrapper">
             <img src="petals.png" alt="3D Petals">
-            <span class="image-name">3D Petals</span>
+            <span class="image-name">Lily Petals</span>
           </div>
           <div class="image-wrapper">
-            <img src="Flowers in a jar.png" alt="Flowers in a Jar">
-            <span class="image-name">Flowers in a Jar</span>
+            <img src="Flowers in a jar.png" alt="Lilies in a Jar">
+            <span class="image-name">Lilies in a Jar</span>
           </div>
         </div>
       </div>
@@ -165,7 +165,7 @@
         <div class="image-container">
           <div class="image-wrapper">
             <img src="msword.png" alt="3D Sword">
-            <span class="image-name">3D Sword</span>
+            <span class="image-name">Master Sword</span>
           </div>
           <div class="image-wrapper">
             <img src="BMO.png" alt="3D BMO">
