--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
     <div class="wrapper">
       <div id="nav">
         <ul>
-          <li><a href="https://oyed18.github.io/The-Gallery/">Home</a></li>
-          <li><a href="https://oyed18.github.io/Gallery-Illustrations/">Illustrations</a></li>
-          <li><a href="https://oyed18.github.io/Gallery-UI-Design/">UI Design</a></li>
-          <li><a href="#">3D Modelling</a></li>
-          <li><a href="https://oyed18.github.io/Gallery-Animations/">Animations</a></li>
+          <li><a href="https://oyed18.github.io/Portfolio/">Home</a></li>
+          <li><a href="https://oyed18.github.io/Folio-Illustrations/">Illustrations</a></li>
+          <li><a href="#">Animations</a></li>
+          <li><a href="https://oyed18.github.io/Folio-3D/">3D Modelling</a></li>
+          <li><a href="#">Projects</a></li>
         </ul>
       </div>
 
