--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         background-color: #8554D4;
         margin: 0;
         font-family: 'KoHo', sans-serif;
-        text-align: center;
+        text-align: left;
       }
 
       .wrapper {
@@ -33,7 +33,31 @@
         font-weight: 700;
         margin: 0;
         color: #8554D4;
-        text-align: center;
+        text-align: left;
+      }
+
+      .navbar {
+        background-color: #000000;
+        padding: 15px 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: #FFFFFF;
+        font-weight: bold;
+      }
+
+      .navbar a {
+        color: #FFFFFF;
+        text-decoration: none;
+        margin-left: 20px;
+        font-size: 1.1em;
+        padding: 8px 20px;
+        transition: color 0.3s ease;
+      }
+
+      .navbar a:hover,
+      .navbar a.active {
+        color: #8554D4;
       }
 
       #nav {
@@ -81,6 +105,7 @@
         position: relative;
         overflow: hidden;
         border-radius: 8px;
+        text-align: center; /* Ensure text is centered */
       }
 
       .image-wrapper img {
@@ -91,6 +116,7 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         cursor: pointer;
+        margin: 0 auto;
       }
 
       .image-wrapper img:hover {
@@ -116,18 +142,25 @@
       .image-wrapper:hover .image-name {
         opacity: 1;
       }
+
+      @media screen and (max-width: 768px) {
+        .image-container {
+          grid-template-columns: 1fr;  /* Stack images vertically on smaller screens */
+        }
+      }
     </style>
   </head>
   <body>
     <div class="wrapper">
-      <div id="nav">
-        <ul>
-          <li><a href="https://oyed18.github.io/Portfolio/">Home</a></li>
-          <li><a href="https://oyed18.github.io/Folio-Illustrations/">Illustrations</a></li>
-          <li><a href="https://oyed18.github.io/Folio-Animations/">Animations</a></li>
-          <li><a href="#">3D Modelling</a></li>
-          <li><a href="https://oyed18.github.io/Folio-Projects/">Projects</a></li>
-        </ul>
+      <div class="navbar">
+        <div>OAA Portfolio</div>
+        <div>
+          <a href="https://oyed18.github.io/Portfolio/" class="home">Home</a>
+          <a href="https://oyed18.github.io/Folio-Illustrations/" class="illustrations">Illustrations</a>
+          <a href="https://oyed18.github.io/Folio-Animations/" class="animations">Animations</a>
+          <a href="https://oyed18.github.io/Folio-3D/" class="threeD active">3D Modelling</a>
+          <a href="https://oyed18.github.io/Folio-Projects/" class="projects">Projects</a>
+        </div>
       </div>
 
       <div id="header">
@@ -174,5 +207,14 @@
         </div>
       </div>
     </div>
+
+    <script>
+      // Add active class to the current navbar link
+      document.querySelectorAll('.navbar a').forEach(function(link) {
+        if (link.href === window.location.href) {
+          link.classList.add('active');
+        }
+      });
+    </script>
   </body>
 </html>
