--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         width: 92%;   
         max-width: 1200px;
         margin: 20px auto;       
-        padding: 20px;           
+        padding: 40px;           
         border-radius: 10px; 
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         min-height: 2200px;
@@ -37,62 +37,26 @@
       }
 
       .navbar {
-        background-color: #000000;
-        padding: 15px 40px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        color: #FFFFFF;
-        font-weight: bold;
-      }
+            background: #000000;
+            padding: 15px 40px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            color: #FFFFFF;
+            font-weight: bold;
+        }
 
-      .navbar a {
-        color: #FFFFFF;
-        text-decoration: none;
-        margin-left: 20px;
-        font-size: 1.1em;
-        padding: 8px 20px;
-        transition: color 0.3s ease;
-      }
+        .navbar a {
+            color: #FFFFFF;
+            text-decoration: none;
+            margin-left: 20px;
+        }
 
-      .navbar a:hover,
-      .navbar a.active {
-        color: #8554D4;
-      }
+        .navbar a:hover,
+        .navbar a.active {
+            color: #8554D4;
+        }
 
-      #nav {
-        clear: both;
-        padding: 0;
-        margin-bottom: 100px;
-      }
-      
-      #nav ul {
-        border-top: 2px solid #FFFFFF;
-        border-bottom: 2px solid #FFFFFF;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        background-color: #000000;
-      }
-
-      #nav li {
-        margin: 0 10px;
-      }
-
-      #nav a {
-        text-decoration: none;
-        color: #FFFFFF;
-        font-size: 1.2em;
-        padding: 10px 50px;
-        display: block;
-        transition: color 0.3s ease;
-      }
-
-      #nav a:hover {
-        color: #8554D4;
-      }
 
       .image-container {
         display: grid;
